--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,13 +1,10 @@
 ---
-import AvatarList from './AvatarList.astro';
-type Props = {
-	path: string;
-};
-const { path } = Astro.props as Props;
+
 ---
 
 <footer>
-	<AvatarList path={path} />
+	<p>이는 독립적인 자료이며  Monte Cook Games, LLC 와 제휴를 맺지 않았습니다. 이는 Cypher System Open License 하에 공개되었으며, 자세한 내용은 <a href="http://csol.montecookgames.com">http://csol.montecookgames.com</a> 에서 찾아보실 수 있습니다.</p>
+	<p>CYPHER SYSTEM 과 그 로고는 Monte Cook Games, LLC의 미국과 다른 나라에서 인정 받는 상표입니다. 모든 Monte Cook Games의 캐릭터와 캐릭터 이름, 그리고 그 외견상 특징 역시 Monte Cook Games, LLC의 상표입니다.</p>
 </footer>
 
 <style>
