--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,11 +1,10 @@
 ---
 import { getLanguageFromURL, KNOWN_LANGUAGE_CODES } from '../../languages';
 import * as CONFIG from '../../config';
-import AstroLogo from './AstroLogo.astro';
+import StarIcon from './StarIcon.astro';
 import SkipToContent from './SkipToContent.astro';
 import SidebarToggle from './SidebarToggle';
 import LanguageSelect from './LanguageSelect';
-import Search from './Search';
 
 type Props = {
 	currentPage: string;
@@ -23,15 +22,12 @@ const lang = getLanguageFromURL(currentPage);
 		</div>
 		<div class="logo flex">
 			<a href="/">
-				<AstroLogo size={40} />
-				<h1>{CONFIG.SITE.title ?? 'Documentation'}</h1>
+				<StarIcon size={40} />
+				<h1 class="w-full">{CONFIG.SITE.title ?? 'Documentation'}</h1>
 			</a>
 		</div>
 		<div style="flex-grow: 1;"></div>
 		{KNOWN_LANGUAGE_CODES.length > 1 && <LanguageSelect lang={lang} client:idle />}
-		<div class="search-item">
-			<Search client:idle />
-		</div>
 	</nav>
 </header>
 
@@ -53,7 +49,6 @@ const lang = getLanguageFromURL(currentPage);
 		flex: 1;
 		display: flex;
 		overflow: hidden;
-		width: 30px;
 		font-size: 2rem;
 		flex-shrink: 0;
 		font-weight: 600;
@@ -82,7 +77,6 @@ const lang = getLanguageFromURL(currentPage);
 	}
 
 	.logo h1 {
-		display: none;
 		font: inherit;
 		color: inherit;
 		margin: 0;
@@ -94,7 +88,6 @@ const lang = getLanguageFromURL(currentPage);
 		justify-content: flex-end;
 		gap: 1em;
 		width: 100%;
-		max-width: 82em;
 		padding: 0 1rem;
 	}
 
@@ -110,40 +103,8 @@ const lang = getLanguageFromURL(currentPage);
 			z-index: 0;
 		}
 
-		.logo h1 {
-			display: initial;
-		}
-
 		.menu-toggle {
 			display: none;
 		}
-	}
-
-	/** Style Algolia */
-	:root {
-		--docsearch-primary-color: var(--theme-accent);
-		--docsearch-logo-color: var(--theme-text);
-	}
-
-	.search-item {
-		display: none;
-		position: relative;
-		z-index: 10;
-		flex-grow: 1;
-		padding-right: 0.7rem;
-		display: flex;
-		max-width: 200px;
-	}
-
-	@media (min-width: 50em) {
-		.search-item {
-			max-width: 400px;
-		}
-	}
-</style>
-
-<style is:global>
-	.search-item > * {
-		flex-grow: 1;
 	}
 </style>
