--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,7 +1,8 @@
 :root {
 	--font-fallback: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif,
 		Apple Color Emoji, Segoe UI Emoji;
-	--font-body: system-ui, var(--font-fallback);
+	--font-body: 'Pretendard', system-ui, var(--font-fallback);
+	--font-serif: 'NanumMyeongjo';
 	--font-mono: 'IBM Plex Mono', Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
 		'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono',
 		'Nimbus Mono L', Monaco, 'Courier New', Courier, monospace;
@@ -58,26 +59,26 @@
 
 :root {
 	color-scheme: light;
-	--theme-accent: hsla(var(--color-blue), 1);
-	--theme-text-accent: hsla(var(--color-blue), 1);
+	--theme-accent: hsla(var(--color-orange), 1);
+	--theme-text-accent: hsla(var(--color-orange), 1);
 	--theme-accent-opacity: 0.15;
 	--theme-divider: hsla(var(--color-gray-95), 1);
-	--theme-text: hsla(var(--color-gray-10), 1);
-	--theme-text-light: hsla(var(--color-gray-40), 1);
+	--theme-text: hsla(var(--color-gray-5), 1);
+	--theme-text-light: hsla(var(--color-gray-20), 1);
 	/* @@@: not used anywhere */
 	--theme-text-lighter: hsla(var(--color-gray-80), 1);
 	--theme-bg: hsla(var(--color-base-white), 100%, 1);
 	--theme-bg-hover: hsla(var(--color-gray-95), 1);
 	--theme-bg-offset: hsla(var(--color-gray-90), 1);
-	--theme-bg-accent: hsla(var(--color-blue), var(--theme-accent-opacity));
+	--theme-bg-accent: hsla(var(--color-orange), var(--theme-accent-opacity));
 	--theme-code-inline-bg: hsla(var(--color-gray-95), 1);
 	--theme-code-inline-text: var(--theme-text);
 	--theme-code-bg: hsla(217, 19%, 27%, 1);
 	--theme-code-text: hsla(var(--color-gray-95), 1);
 	--theme-navbar-bg: hsla(var(--color-base-white), 100%, 1);
 	--theme-navbar-height: 6rem;
-	--theme-selection-color: hsla(var(--color-blue), 1);
-	--theme-selection-bg: hsla(var(--color-blue), var(--theme-accent-opacity));
+	--theme-selection-color: hsla(var(--color-orange), 1);
+	--theme-selection-bg: hsla(var(--color-yellow), var(--theme-accent-opacity));
 }
 
 body {
@@ -88,8 +89,8 @@ body {
 :root.theme-dark {
 	color-scheme: dark;
 	--theme-accent-opacity: 0.15;
-	--theme-accent: hsla(var(--color-blue), 1);
-	--theme-text-accent: hsla(var(--color-blue), 1);
+	--theme-accent: hsla(var(--color-orange), 1);
+	--theme-text-accent: hsla(var(--color-orange), 1);
 	--theme-divider: hsla(var(--color-gray-10), 1);
 	--theme-text: hsla(var(--color-gray-90), 1);
 	--theme-text-light: hsla(var(--color-gray-80), 1);
@@ -106,17 +107,6 @@ body {
 	--theme-navbar-bg: hsla(215, 28%, 17%, 1);
 	--theme-selection-color: hsla(var(--color-base-white), 100%, 1);
 	--theme-selection-bg: hsla(var(--color-purple), var(--theme-accent-opacity));
-
-	/* DocSearch [Algolia] */
-	--docsearch-modal-background: var(--theme-bg);
-	--docsearch-searchbox-focus-background: var(--theme-divider);
-	--docsearch-footer-background: var(--theme-divider);
-	--docsearch-text-color: var(--theme-text);
-	--docsearch-hit-background: var(--theme-divider);
-	--docsearch-hit-shadow: none;
-	--docsearch-hit-color: var(--theme-text);
-	--docsearch-footer-shadow: inset 0 2px 10px #000;
-	--docsearch-modal-shadow: inset 0 0 8px #000;
 }
 
 ::selection {
