--- a/src/components/RightSidebar/RightSidebar.astro
+++ b/src/components/RightSidebar/RightSidebar.astro
@@ -11,7 +11,7 @@ type Props = {
 const { headings, githubEditUrl } = Astro.props as Props;
 ---
 
-<nav class="sidebar-nav" aria-labelledby="grid-right">
+<nav class="sidebar-nav">
 	<div class="sidebar-nav-inner">
 		<TableOfContents client:media="(min-width: 50em)" headings={headings} />
 		<MoreMenu editHref={githubEditUrl} />
