--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -51,6 +51,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
 				position: sticky;
 				top: 0;
 				padding: 0;
+				height: 100%;
 			}
 
 			#grid-left {
