--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -46,12 +46,18 @@ nav ul {
 /* Typography */
 h1,
 h2,
+h3 {
+	font-weight: bold;
+	/* @apply text-primary */
+}
+
+h1,
+h2,
 h3,
 h4,
 h5,
 h6 {
 	margin-bottom: 1rem;
-	font-weight: bold;
 	line-height: 1;
 }
 
@@ -342,5 +348,5 @@ input[type="checkbox"]:checked {
 }
 
 table {
-	@apply table
+	@apply table;
 }
