--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -4,7 +4,9 @@
 
 <footer>
 	<p>이는 독립적인 자료이며  Monte Cook Games, LLC 와 제휴를 맺지 않았습니다. 이는 Cypher System Open License 하에 공개되었으며, 자세한 내용은 <a href="http://csol.montecookgames.com">http://csol.montecookgames.com</a> 에서 찾아보실 수 있습니다.</p>
-	<p>CYPHER SYSTEM 과 그 로고는 Monte Cook Games, LLC의 미국과 다른 나라에서 인정 받는 상표입니다. 모든 Monte Cook Games의 캐릭터와 캐릭터 이름, 그리고 그 외견상 특징 역시 Monte Cook Games, LLC의 상표입니다.</p>
+	<p>CYPHER SYSTEM과 Numenera 그 로고는 Monte Cook Games, LLC의 미국과 다른 나라에서 인정 받는 상표입니다. 모든 Monte Cook Games의 캐릭터와 캐릭터 이름, 그리고 그 외견상 특징 역시 Monte Cook Games, LLC의 상표입니다.</p>
+	<p>누메네라는 한국에서 도서출판 초여명에서 번역하여 출판하고 있습니다. [알피지 스토어](https://www.rpgstore.kr/front/product/product_list.php?pinid=24201)와 각종 인터넷/오프라인 서점에서 구매하실 수 있습니다.</p>
+
 </footer>
 
 <style>
