feat: list style and me link

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -95,6 +95,10 @@ p {
 	line-height: 1.1em;
 }
 
+.content ol {
+	list-style-type:decimal;
+}
+
 p,
 .content ul {
 	color: var(--theme-text-light);
