--- a/src/pages/ko/numenera/pregenerated-characters.astro
+++ b/src/pages/ko/numenera/pregenerated-characters.astro
@@ -885,7 +885,7 @@ const WRIGHT = {
   artifacts: [],
   oddities: [],
   background: `당신은 뭔가 만드는 걸 좋아했지만, 그러려면 누메네라에서 발굴한 아이오툼이 필요했기에, 그걸 얻는 가장 저렴한 방법은 오랜 유적을 파고드는 것이라, 당신은 모험가가 되었습니다. 이건 위험일 일이고, 당신과 함께 하는 동료들은 이런 위험을 잘 다루기에, 당신에게도 잘 맞는 조합이었습니다.
-  당신의 다음 멋진 제작 계획을 시작할 지금 하는 일이 잘 되면 멋진 재료들을 당신에게 안겨줄 가능성이 높아서 기대하고 있습니다.
+  지금 하는 일이 잘 되면 다음 제작 계획을 시작하는데 필요한 멋진 재료들을 당신에게 안겨줄거라 기대하고 있습니다.
   허본은 자꾸 당신 옆에 오길 피하는데, 이유는 잘 모르겠습니다.
   렐리스와 이제 몇 년 째 같이 탐험을 해왔는데, 많은 부분에서 의견이 정말 안 맞았지만, 일감을 찾아오는 건 정말 잘 하기 때문에, 받아들이고 있습니다.`,
   notes: '',
