--- a/src/pages/ko/numenera/pregenerated-characters.astro
+++ b/src/pages/ko/numenera/pregenerated-characters.astro
@@ -307,7 +307,7 @@ const DELVE = {
     {
       title: '파열의 손길 (힘 1+ 점)',
       description:
-        '위상 질주를 하는 동안, 스치는 적에게 에너지를 방출해 목표에게 (장갑을 무시하는) 2점의 피해를 줄 수 있습니다. 맞건 빚나가건, 당신의 움직임과 차례는 바로 끝나버리고 목표의 지근거리에 위치하게 됩니다. 분발을 써서 피해를 증가시키면, 분발한 단계마다 2점의 피해를 더 줄 수 있고 (3점이 아닙니다), 공격 굴림에 실패하더라도 목표는 1점의 피해를 받습니다. 강화.'
+        '위상 질주를 하는 동안, 스치는 적에게 에너지를 방출해 목표에게 (장갑을 무시하는) 2점의 피해를 줄 수 있습니다. 맞건 빚나가건, 당신의 움직임과 차례는 바로 끝나버리고 목표의 지근거리에 위치하게 됩니다. 분발을 써서 피해를 증가시키면, 분발한 단계마다 2점의 피해를 더 줄 수 있고 (3점이 아닙니다), 공격 판정에 실패하더라도 목표는 1점의 피해를 받습니다. 강화.'
     },
     {
       title: '갑옷이 없는 게 익숙',
@@ -333,7 +333,7 @@ const DELVE = {
       title: '폭발 (거미줄)',
       level: 4,
       description:
-        '팔찌형 발사기. 장거리에 공을 하나 발사하고, 터지면 지근거리에 1시간 동안 지속되는 끈쩍하고 달라붙는 실을 만듭니다. 그 영역 안의 PC들은 탈출하려면 힘 굴림을 해야 합니다. (난이도는 레벨과 같음) NPC나 생물은 레벨이 4 이상이면 부수고 빠져나올 수 있습니다.',
+        '팔찌형 발사기. 장거리에 공을 하나 발사하고, 터지면 지근거리에 1시간 동안 지속되는 끈쩍하고 달라붙는 실을 만듭니다. 그 영역 안의 PC들은 탈출하려면 힘 판정을 해야 합니다. (난이도는 레벨과 같음) NPC나 생물은 레벨이 4 이상이면 부수고 빠져나올 수 있습니다.',
       used: false,
     },
   ],
@@ -1074,7 +1074,7 @@ const JACK = {
     },
     {
       title: '조용한 신발',
-      description: '(비밀스러운 움직임과 관련된 굴림에 항상 보탬을 받습니다)',
+      description: '(비밀스러운 움직임과 관련된 판정에 항상 보탬을 받습니다)',
     },
     {
       title: '신기품: 안에 초록 거품이 움직이는 단단하고 투명한 신스 정육면체',
