--- a/src/pages/ko/welcome.astro
+++ b/src/pages/ko/welcome.astro
@@ -39,7 +39,7 @@ import MainLayout from '../../layouts/MainLayout.astro';
         </div>
       </p>
       <div class="flex flex-wrap gap-2 justify-end">
-        <li class="badge badge-outline">누메네라</li>
+        <li class="badge badge-outline">사이퍼 시스템</li>
         <li class="badge badge-outline">크툴루 컨피덴셜</li>
         <div
           class="tooltip hover:tooltip-open tooltip-top"
