--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -360,7 +360,7 @@ input[type="checkbox"]:checked {
 
 table {
 	@apply table table-zebra;
-	width: 75ch;
+	max-width: 75ch;
 }
 
 table tr td {
@@ -370,4 +370,14 @@ table tr td {
 
 .numenera-box {
 	@apply p-4 border-2 border-primary;
+	background-color: hsl(var(--p) / 0.3);
+}
+
+.content ul {
+  list-style: disc;
+}
+
+.highlight-box {
+	@apply border-primary p-4 border-y-2;
+	background-image: linear-gradient(0.25turn, hsl(var(--b1)), hsl(var(--p) / 0.3), hsl(var(--p) / 0.3), hsl(var(--p) / 0.3), hsl(var(--b1)));
 }
