fix: 배경색, 광고, 캐릭터 시트 높이

--- a/src/pages/ko/numenera/pregenerated-characters.astro
+++ b/src/pages/ko/numenera/pregenerated-characters.astro
@@ -1020,7 +1020,7 @@ const JACK = {
       level: 'trained',
     },
     {
-      title: '등반, 수영, 도약, 균형잡기 등',
+      title: '등반, 수영, 도약, 균형잡기',
       level: 'trained',
     },
     {
@@ -1149,12 +1149,10 @@ const JACK = {
 ---
 
 <SheetLayout frontmatter={frontmatter} headings={[]}>
-  <main class="flex flex-col w-full max-w-6xl mx-auto gap-16">
-    <CharacterSheet character={ARKUS} />
-    <CharacterSheet character={DELVE} />
-    <CharacterSheet character={GLAVE} />
-    <CharacterSheet character={NANO} />
-    <CharacterSheet character={WRIGHT} />
-    <CharacterSheet character={JACK} />
-  </main>
+  <CharacterSheet character={ARKUS} />
+  <CharacterSheet character={DELVE} />
+  <CharacterSheet character={GLAVE} />
+  <CharacterSheet character={NANO} />
+  <CharacterSheet character={WRIGHT} />
+  <CharacterSheet character={JACK} />
 </SheetLayout>
