--- a/src/components/CharacterSheet.astro
+++ b/src/components/CharacterSheet.astro
@@ -10,9 +10,9 @@ const { character } = Astro.props;
 
 <div class="flex flex-col lg:flex-row w-full text-center gap-1">
   <div class="column">
-    <div class="h-3/5 p-2 overflow-scroll">
+    <div class="p-2 overflow-scroll">
       <h3>특수 능력</h3>
-      <ul class="flex flex-col gap-2 text-left">
+      <ul class="flex flex-col gap-1 text-left">
         {
           character.specialAbilities.map((specialAbility) => (
             <li class="text-xs w-full">
@@ -25,7 +25,7 @@ const { character } = Astro.props;
         }
       </ul>
     </div>
-    <div class="h-2/5 p-2">
+    <div class="p-2">
       <h3>사이퍼</h3>
       <p class="text-xs italic">
         사이퍼는 일회용 아이템입니다. 사용하고 나면 시트에서 사선을 그으십시오.
@@ -312,7 +312,7 @@ const { character } = Astro.props;
     .column {
       width: 33.333333%;
       max-width: 100%;
-      height: 40rem;
+      height: 44rem;
     }
   }
 </style>
