--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -27,12 +27,17 @@ html {
 body {
 	display: flex;
 	flex-direction: column;
-	min-height: 100vh;
 	font-family: var(--font-body);
 	font-size: 1rem;
 	font-size: clamp(0.9rem, 0.75rem + 0.375vw + var(--user-font-scale), 1rem);
 	line-height: 1.5;
 	max-width: 100vw;
+	height: fit-content;
+	background-color: var(--theme-bg);
+}
+
+main {
+	background-color: var(--theme-bg);
 }
 
 nav ul {
