fix: footer height

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -46,6 +46,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
 						1fr
 					);
 				overflow-x: hidden;
+				min-height: calc(100vh - 15rem);
 			}
 
 			.grid-sidebar {
