--- a/src/components/RightSidebar/MoreMenu.astro
+++ b/src/components/RightSidebar/MoreMenu.astro
@@ -19,7 +19,7 @@ const { editHref } = Astro.props as Props;
 		</li>
 	)}
 	<div class="w-48 text-center flex justify-end mt-2">
-		<ThemeToggleButton client:visible />
+		<ThemeToggleButton client:load />
 	</div>
 </ul>
 
