--- a/src/pages/ko/numenera/pregenerated-characters.astro
+++ b/src/pages/ko/numenera/pregenerated-characters.astro
@@ -497,7 +497,7 @@ const GLAVE = {
     {
       title: '천둥 (힘 2점)',
       description:
-        '집중된 소리의 빔을 장거리 내의 목표에게 겨눠서, 2점의 피해를 주고 공명하는 파괴적인 파동을 몸에 남길 수 있습니다. 이 첫 공격 이후 매 라운드마다, 주사위를 굴려서 이 파괴적인 파동이 11점의 피해를 더 주는지 봅니다.(이 추가 피해는 장갑을 무시합니다.) 실패하면 파괴 파동이 끝납니다. 대신에, 근접 무기를 1분동안 강화해서 1점의 피해를 더 주게 할 수도 있습니다. 발동시키려면 행동',
+        '집중된 소리의 빔을 장거리 내의 목표에게 겨눠서, 2점의 피해를 주고 공명하는 파괴적인 파동을 몸에 남길 수 있습니다. 이 첫 공격 이후 매 라운드마다, 주사위를 굴려서 이 파괴적인 파동이 1점의 피해를 더 주는지 봅니다.(이 추가 피해는 장갑을 무시합니다.) 실패하면 파괴 파동이 끝납니다. 대신에, 근접 무기를 1분동안 강화해서 1점의 피해를 더 주게 할 수도 있습니다. 발동시키려면 행동',
     },
     {
       title: '갑옷 숙련',
@@ -523,7 +523,7 @@ const GLAVE = {
       title: '동작 감지기',
       level: 6,
       description:
-        '척추 주사. 단거리에서 어떤 움직임이로도 있거나, 혹은 큰 생물이나 물체가 장거리에서 움직이는 것도 알아차릴 수 있습니다. 움직이는 생물이나 물체의 숫자나 크기를 알 수 있습니다. 6시간 정도 지속됩니다.',
+        '척추 주사. 단거리에서 어떤 움직임이라도 있거나, 혹은 큰 생물이나 물체가 장거리에서 움직이는 것도 알아차릴 수 있습니다. 움직이는 생물이나 물체의 숫자나 크기를 알 수 있습니다. 6시간 정도 지속됩니다.',
       used: false,
     },
   ],
