--- a/src/components/CharacterSheet.astro
+++ b/src/components/CharacterSheet.astro
@@ -8,9 +8,9 @@ interface Props {
 const { character } = Astro.props;
 ---
 
-<div class="flex flex-col lg:flex-row w-full text-center gap-1">
+<div class="flex flex-col md:flex-row w-full text-center gap-1">
   <div class="column">
-    <div class="p-2 overflow-scroll">
+    <div class="p-2 overflow-auto">
       <h3>특수 능력</h3>
       <ul class="flex flex-col gap-1 text-left">
         {
