--- a/src/components/RightSidebar/RightSidebar.astro
+++ b/src/components/RightSidebar/RightSidebar.astro
@@ -29,6 +29,7 @@ const { headings, githubEditUrl } = Astro.props as Props;
 	.sidebar-nav-inner {
 		max-height: 100vh;
 		padding: 0;
+		padding-bottom: 8rem;
 		padding-top: var(--doc-padding);
 		overflow: auto;
 	}
