--- a/src/pages/ko/welcome.astro
+++ b/src/pages/ko/welcome.astro
@@ -76,7 +76,7 @@ import MainLayout from '../../layouts/MainLayout.astro';
         class="tooltip hover:tooltip-open tooltip-bottom"
         data-tip="노동자, 여성, 흑인, 장애인, 이주민, 동성애자, 트랜스젠더, 비인간동물, 체형과 신경다양인 등 약자, 소수자를 차별하거나, 혹은 연대하지 않는 분은 뒤로가기를 눌러주세요."
       >
-        <p class="underline">모든 불평등과 압제에 반대합니다.</p>
+        <p class="underline">자유롭고 평등한 세상을 위해 노력합니다.</p>
       </div>
     </div>
   </article>
