--- a/src/components/RightSidebar/MoreMenu.astro
+++ b/src/components/RightSidebar/MoreMenu.astro
@@ -9,6 +9,29 @@ type Props = {
 const { editHref } = Astro.props as Props;
 ---
 
+<script>
+	function getTheme(){
+		if (import.meta.env.SSR) {
+      return undefined;
+    }
+    if (typeof localStorage !== undefined && localStorage.getItem("theme")) {
+      return localStorage.getItem("theme");
+    }
+    if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+      return "dark";
+    }
+    return "light";
+	}
+	const root = document.documentElement;
+	if (getTheme() === "light") {
+		root.classList.remove("theme-dark");
+		root.setAttribute('data-theme', "bumblebee")
+	} else {
+		root.classList.add("theme-dark");
+		root.setAttribute('data-theme', "halloween")
+	}
+</script>
+
 <ul>
 	{editHref && (
 		<li class={`heading-link depth-2`}>
