--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -46,7 +46,6 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
 						1fr
 					);
 				overflow-x: hidden;
-				min-height: calc(100vh - 15rem);
 			}
 
 			.grid-sidebar {
@@ -54,6 +53,11 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
 				top: 0;
 				padding: 0;
 				height: 100%;
+			}
+
+			.bg-theme {
+				background-color: var(--theme-bg);
+				height: fit-content;
 			}
 
 			#grid-left {
@@ -121,20 +125,22 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
 	</head>
 
 	<body>
-		<Header currentPage={currentPage} />
-		<main class="layout">
-			<aside id="grid-left" class="grid-sidebar" title="Site Navigation">
-				<LeftSidebar currentPage={currentPage} />
-			</aside>
-			<div id="grid-main">
-				<PageContent frontmatter={frontmatter} headings={headings} githubEditUrl={githubEditUrl}>
-					<slot />
-				</PageContent>
-			</div>
-			<aside id="grid-right" class="grid-sidebar">
-				<RightSidebar headings={headings} githubEditUrl={githubEditUrl} />
-			</aside>
-		</main>
-		<Footer />
+		<div class="min-h-screen flex flex-col justify-between bg-theme">
+			<Header currentPage={currentPage} />
+			<main class="layout grow">
+				<aside id="grid-left" class="grid-sidebar" title="Site Navigation">
+					<LeftSidebar currentPage={currentPage} />
+				</aside>
+				<div id="grid-main">
+					<PageContent frontmatter={frontmatter} headings={headings} githubEditUrl={githubEditUrl}>
+						<slot />
+					</PageContent>
+				</div>
+				<aside id="grid-right" class="grid-sidebar">
+					<RightSidebar headings={headings} githubEditUrl={githubEditUrl} />
+				</aside>
+			</main>
+			<Footer />
+		</div>
 	</body>
 </html>
