--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,11 +33,6 @@ body {
 	line-height: 1.5;
 	max-width: 100vw;
 	height: fit-content;
-	background-color: var(--theme-bg);
-}
-
-main {
-	background-color: var(--theme-bg);
 }
 
 nav ul {
@@ -108,18 +103,13 @@ p {
 	list-style-type:decimal;
 }
 
-p,
-.content ul {
-	color: var(--theme-text-light);
-}
-
 small,
 .text_small {
 	font-size: 0.833rem;
 }
 
 a {
-	color: var(--theme-text-accent);
+	@apply text-primary;
 	font-weight: 400;
 	text-decoration: underline;
 	text-underline-offset: 0.08em;
@@ -128,7 +118,7 @@ a {
 }
 
 em {
-	color: var(--theme-text-accent);
+	@apply text-primary;
 }
 
 article > section nav :is(ul, ol) > * + * {
@@ -158,7 +148,7 @@ article > section nav {
 
 article > section ::marker {
 	font-weight: bold;
-	color: var(--theme-text-light);
+	@apply text-primary;
 }
 
 article > section iframe {
@@ -169,7 +159,7 @@ article > section iframe {
 
 a > code {
 	position: relative;
-	color: var(--theme-text-accent);
+	@apply text-primary;
 	background: transparent;
 	text-underline-offset: var(--padding-block);
 }
@@ -182,9 +172,6 @@ a > code::before {
 	bottom: 0;
 	left: 0;
 	display: block;
-	background: var(--theme-accent);
-	opacity: var(--theme-accent-opacity);
-	border-radius: var(--border-radius);
 }
 
 a:focus {
@@ -207,7 +194,7 @@ code {
 	font-family: var(--font-mono);
 	font-size: 0.85em;
 	color: inherit;
-	background-color: var(--theme-code-inline-bg);
+	@apply bg-secondary;
 	padding: var(--padding-block) var(--padding-inline);
 	margin: calc(var(--padding-block) * -1) -0.125em;
 	border-radius: var(--border-radius);
@@ -223,12 +210,10 @@ pre > code {
 }
 
 pre {
-	background-color: var(--theme-code-bg);
-	color: var(--theme-code-text);
-}
-
-blockquote code {
-	background-color: var(--theme-bg);
+	--tw-bg-opacity: 1;
+	background-color: hsl(var(--n)/var(--tw-bg-opacity));
+	--tw-text-opacity: 1;
+	color: hsl(var(--nc)/var(--tw-text-opacity));
 }
 
 @media (min-width: 37.75em) {
@@ -243,9 +228,7 @@ blockquote code {
 blockquote {
 	margin: 2rem 0;
 	padding: 1.25em 1.5rem;
-	border-left: 3px solid var(--theme-accent);
-	background-color: var(--theme-bg-accent);
-	border-radius: 0 0.25rem 0.25rem 0;
+	@apply bg-base-200 rounded-2xl;
 	line-height: 1.7;
 }
 
@@ -265,14 +248,11 @@ button {
 	gap: 0.25em;
 	padding: 0.33em 0.67em;
 	border: 0;
-	background: var(--theme-bg);
 	display: flex;
 	font-size: 1rem;
 	align-items: center;
 	gap: 0.25em;
 	border-radius: 99em;
-	color: var(--theme-text);
-	background-color: var(--theme-bg);
 }
 
 h2.heading {
@@ -286,19 +266,16 @@ h2.heading {
 .heading-link {
 	font-size: 1rem;
 	padding: 0.1rem 0 0.1rem 1rem;
-	border-left: 4px solid var(--theme-divider);
+	@apply border-l-4 border-base-300;
 }
 
 .heading-link:hover,
 .heading-link:focus,
 .heading-link.active {
-	border-left-color: var(--theme-accent);
-	color: var(--theme-accent);
-	background-color: var(--theme-bg-accent);
+	@apply border-l-4 border-primary bg-base-200 text-primary-focus;
 }
 .heading-link:focus-within {
-	color: var(--theme-text-light);
-	border-left-color: hsla(var(--color-gray-40), 1);
+	@apply text-primary-focus border-base-300;
 }
 .heading-link svg {
 	opacity: 0.6;
