--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="w-full h-fit p-4 text-xs xl:text-sm 2xl:text-base bg-base-200">
+<footer class="w-full h-fit p-4 text-xs xl:text-sm 2xl:text-base bg-base-200 border-t-2 border-base-300">
 	<div class="w-fit m-auto">
 		<p>이는 독립적인 자료이며  Monte Cook Games, LLC 와 제휴를 맺지 않았습니다. 이는 Cypher System Open License 하에 공개되었으며, 자세한 내용은 <a href="http://csol.montecookgames.com">http://csol.montecookgames.com</a> 에서 찾아보실 수 있습니다.</p>
 		<p>CYPHER SYSTEM과 Numenera 그 로고는 Monte Cook Games, LLC의 미국과 다른 나라에서 인정 받는 상표입니다. 모든 Monte Cook Games의 캐릭터와 캐릭터 이름, 그리고 그 외견상 특징 역시 Monte Cook Games, LLC의 상표입니다.</p>
@@ -11,7 +11,6 @@
 
 <style>
 	footer {
-		border-top: 3px solid var(--theme-divider);
 		z-index: 999;
 	}
 </style>
