--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -14,7 +14,7 @@ const { currentPage } = Astro.props as Props;
 const lang = getLanguageFromURL(currentPage);
 ---
 
-<header>
+<header class="bg-base-100">
 	<SkipToContent />
 	<nav class="nav-wrapper" title="Top Navigation">
 		<div class="menu-toggle">
@@ -34,13 +34,12 @@ const lang = getLanguageFromURL(currentPage);
 <style>
 	header {
 		z-index: 11;
-		height: var(--theme-navbar-height);
 		width: 100%;
-		background-color: var(--theme-navbar-bg);
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		overflow: hidden;
+		height: 6rem;
 	}
 
 	.logo {
@@ -65,12 +64,12 @@ const lang = getLanguageFromURL(currentPage);
 
 	.logo a {
 		transition: color 100ms ease-out;
-		color: var(--theme-text);
+		@apply text-base-content;
 	}
 
 	.logo a:hover,
 	.logo a:focus {
-		color: var(--theme-text-accent);
+		@apply text-primary;
 	}
 
 	.logo h1 {
