--- a/src/components/RightSidebar/ThemeToggleButton.css
+++ b/src/components/RightSidebar/ThemeToggleButton.css
@@ -4,12 +4,12 @@
 	gap: 0.25em;
 	padding: 0.33em 0.67em;
 	border-radius: 99em;
-	background-color: var(--theme-code-inline-bg);
+	@apply bg-base-300;
 }
 
 .theme-toggle > label:focus-within {
 	outline: 2px solid transparent;
-	box-shadow: 0 0 0 0.08em var(--theme-accent), 0 0 0 0.12em white;
+	box-shadow: 0 0 0 0.08em hsl(var(--p)/var(--tw-bg-opacity)), 0 0 0 0.12em white;
 }
 
 .theme-toggle > label {
@@ -22,8 +22,7 @@
 }
 
 .theme-toggle .checked {
-	color: var(--theme-accent);
-	opacity: 1;
+	@apply text-primary opacity-100;
 }
 
 input[name='theme-toggle'] {
