--- a/src/pages/ko/welcome.astro
+++ b/src/pages/ko/welcome.astro
@@ -5,8 +5,8 @@ import MainLayout from '../../layouts/MainLayout.astro';
 <MainLayout
   frontmatter={{
     title: '스텔로의 토끼굴',
-    description: 'test',
-    layout: '../../layouts/MainLayout.astro',
+    description: '지금은 누메네라를 주로 하면서, 관련 자료를 번역하고 있습니다.',
+    layout: '',
   }}
   headings={[]}
 >
