feat: scroll top button (no js)

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -139,6 +139,9 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
 				</aside>
 			</main>
 			<Footer />
+			<a href="#overview" class="btn btn-primary mx-auto fixed bottom-4 right-4 z-50">
+				🔝 맨 위로
+			</a>
 		</div>
 		<script>
 			[...document.getElementById('article')?.querySelectorAll(':is(h1,h2,h3)') ?? []]
