--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -12,7 +12,7 @@ const langCode = getLanguageFromURL(currentPage);
 const sidebar = SIDEBAR[langCode];
 ---
 
-<nav aria-labelledby="grid-left" class="fixed top-10 w-full h-full md:max-h-fit md:max-w-fit">
+<nav aria-labelledby="grid-left" class="fixed top-10 w-full h-full md:max-h-fit md:max-w-fit bg-base-100">
   <ul class="nav-groups">
     <NavLink link="ko/welcome" text="입구" />
     <br />
